# marzbanbot

./: Dockerfile  README.md  docker-compose.yml  flake.nix  module.nix  package.nix  pyproject.toml  setup.cfg
.github/workflows/: docker.yml
marzbanbot/: __main__.py
